# Higgs_Audio_TTS_Easy_GUI

./: .gitignore  README.md  app.py  install.bat  install.sh  patch_env.py  pyproject.toml  start.bat  start.sh
higgs_local/: __init__.py  adapters.py  asr.py  asr_worker.py  audio_utils.py  engines.py  model_registry.py  paths.py  training_runner.py  training_utils.py  v3_training_loss.py  voice_library.py
train-higgs-audio/trainer/: v2_hf_trainer.py  v3_trainer.py
