[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "higgs-audio-local"
version = "0.1.0"
description = "Local Gradio workspace for Higgs Audio V2/V3 inference, ASR, datasets, and training."
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.26.0",
    "bitsandbytes; platform_system == 'Linux'",
    "click",
    "dacite",
    "descript-audio-codec",
    "faster-whisper",
    "gradio>=4.44",
    "hf-xet",
    "huggingface_hub",
    "jieba",
    "json_repair",
    "langid",
    "librosa==0.11.0",
    "loguru",
    "llvmlite>=0.44,<0.46",
    "numba>=0.61,<0.63",
    "numpy>=1.26,<2.3",
    "omegaconf",
    "pandas",
    "pydantic",
    "pydub",
    "pyloudnorm",
    "peft==0.15.2",
    "pyyaml",
    "requests",
    "ruff==0.12.2",
    "sentencepiece",
    "setuptools<81",
    "soundfile",
    "tensorboard==2.20.0",
    "torch>=2.6",
    "torchaudio>=2.6",
    "torchvision>=0.21",
    "tqdm",
    "transformers>=4.56",
    "vector_quantize_pytorch",
]

[tool.setuptools.packages.find]
include = ["boson_multimodal*", "higgs_local*"]

[tool.uv]
constraint-dependencies = [
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "torchvision==0.22.1",
]
